# feature-finder

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
featureFinder/: app_main.py  app_ui.py  detection_methods.py  internal_objects.py  mtf_methods.py  processing_support.py
src/feature_finder/: __init__.py  app_main.py  app_ui.py  data_objects.py  data_processing.py  detection_methods.py  processing_support.py
src/feature_finder/interface/: feature_finder_test.py  featurefinder.py  form.ui  pyproject.toml  ui_form.py
src/feature_finder/resources/: detection_settings.json
src/feature_finder/user_interface/: form.ui  pyproject.toml
